Add say_hello; update index

--- a/nbs/00_mycore.ipynb
+++ b/nbs/00_mycore.ipynb
@@ -15,6 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| default_exp mycore"
    ]
   },
@@ -91,6 +101,34 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "class HelloSayer:\n",
+    "    \"Say hello to `to` using `say_hello`\"\n",
+    "    def __init__(self, to): self.to = to\n",
+    "    \n",
+    "    def say(self):\n",
+    "        \"Do the saying\"\n",
+    "        return say_hello(self.to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_doc(HelloSayer.say)\n",
+    "\n",
+    "o = HelloSayer(\"Rob\")\n",
+    "o.say()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def foo(): pass"
    ]
   },
@@ -103,13 +141,6 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
